2008-12-11  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora_windows_service.h,
	  win32/pandora_windows_service.cc: Added support for a secondary server
	  .


2008-12-11  Ramon Novoa  <rnovoa@artica.es>

	* win32/windows/pandora_wmi.cc,
	  win32/pandora_windows_service.h,
	  win32/PandoraAgent.dev,
	  win32/pandora_windows_service.cc: Added an UDP Server. The
	  agent can receive remote commands.

	* win32/udp_server,
	  win32/udp_server/udp_server.cc,
	  win32/udp_server/udp_server.h: Added to repository. UDP Server.

2008-12-10  Ramon Novoa  <rnovoa@artica.es>

	*  linux/pandora_agent,
	   linux/pandora_agent.conf: Added support for a secondary server.

2008-11-25  Sancho Lerena <slerena@gmail.com>

	* linux/pandora_agent: Fixed problem parsing async_string.

	* linux/pandora_agent.conf: Sample of async_string module.

2008-09-04  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* mac_osx/plugins/XServeRAID: Updated for 2.0 type agents. Added
	license information

	* mac_osx/plugins/SGE: Added SGE plugin. This is a shell script that
	will output the status of an SGE computing cluster. Best installed on
	the SGE Master

	* mac_osx/plugins/ppc_sensors: Updated for 2.0 type agents. Added
	license information

	* mac_osx/plugins/ipmi2xml: Renamed .txt to .php (what it should be).
	Updated to 2.0 type agents. Added license information

2008-09-03  SAncho Lerena <lserena@artica.es>

	* linux/pandora_agent_installer: Added link to startup
	for linux agent.

2008-07-31  Ramon Novoa  <rnovoa@artica.es>

	* win32/bin/PandoraAgent.exe: Updated to r989.

2008-07-31  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora_windows_service.cc: Small fixes.
	* win32/modules/pandora_module.cc: time() and localtime() are used
	  instead of GetSystemTime().
	* win32/pandora.h: Changed all instances of "Pandora" to
	  "Pandora FMS".

2008-07-30  Ramon Novoa  <rnovoa@artica.es>

	* win32/windows/pandora_wmi.cc: Fixed typo bug.

2008-07-24  Ramon Novoa  <rnovoa@artica.es>
